--- a/package.json
+++ b/package.json
@@ -64,5 +64,9 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.0"
+  },
+  "resolutions": {
+    "@ethersproject/abi": "5.2.0",
+    "@ethersproject/contracts": "5.2.0"
   }
 }
