--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ REACT_APP_OASISETH_RPC_ENDPOINT=https://rpc.oasiseth.org:8545
 REACT_APP_WEB3_STORAGE_API_KEY=
 REACT_NFT_STORAGE_TOKEN=
 REACT_APP_TEXTILE_API_KEY=
+REACT_APP_META_FACTORY_CONTRACT_ADDRESS=
