--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.15",
-    "@chakra-ui/react": "^1.6.8",
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.7.3",
+    "@dapplabs/evm": "^0.7.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@testing-library/jest-dom": "^5.11.4",
@@ -34,7 +35,6 @@
     "rxjs": "^6.6.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "web3-sdk": "^0.1.0",
     "web3.storage": "^3.3.2"
   },
   "scripts": {
