--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.3",
-    "@dapptools/evm": "^0.7.4",
+    "@dapptools/evm": "^0.7.7-rc.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@textile/hub": "^6.3.1",
+    "@textile/hub": "^6.3.2",
+    "@types/uuid": "^8.3.3",
     "ethers": "^5.5.2",
     "framer-motion": "^4",
     "lodash": "^4.17.21",
-    "nft.storage": "^5.1.3",
+    "nft.storage": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
@@ -21,15 +22,16 @@
     "react-redux": "^7.2.6",
     "react-router": "^6.1.1",
     "react-router-dom": "^6.1.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "react-spinners": "^0.11.0",
     "redux": "^4.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.2",
     "typescript": "^4.5.4",
     "universal-cookie": "^4.0.4",
-    "web-vitals": "^1.0.1",
-    "web3.storage": "^3.5.1"
+    "uuid": "^8.3.2",
+    "web-vitals": "^2.1.2",
+    "web3.storage": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -68,7 +70,7 @@
     "@types/react-router-dom": "^5.3.0"
   },
   "resolutions": {
-    "@ethersproject/abi": "5.2.0",
-    "@ethersproject/contracts": "5.2.0"
+    "@ethersproject/abi": "5.5.0",
+    "@ethersproject/contracts": "5.5.0"
   }
 }
